--- a/lib/samplesite/content/403.md
+++ b/lib/samplesite/content/403.md
@@ -7,3 +7,5 @@ Error 403
 =========
 
 Woops. Looks like you don't have access rights for this page.
+
+Try <a href="/?redirect_url=%base_url%">logging in</a>
