--- a/lib/samplesite/content/403.md
+++ b/lib/samplesite/content/403.md
@@ -8,4 +8,4 @@ Error 403
 
 Woops. Looks like you don't have access rights for this page.
 
-Try <a href="/?redirect_url=%base_url%">logging in</a>
+<!--Try <a href="/?redirect_url=%base_uri%">logging in</a>.-->
