Default to index generation and 'private' access for directories w/ o index.md.

--- a/lib/samplesite/content-sample_blog/403.md
+++ b/lib/samplesite/content-sample_blog/403.md
@@ -7,5 +7,4 @@ Error 403
 =========
 
 Woops. Looks like you don't have access rights for this page.
-
-<!--Try <a href="/?redirect_url=%base_uri%">logging in</a>.-->
+Or maybe you haven't [logged in](%master_url%?redirect_url=%base_uri%/%url%)?
